<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_marginTop="30dp"
       android:src="@mipmap/ic_launcher"
       android:layout_gravity="center"
       android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="casual"
        android:text="@string/Semi_truck"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="casual"
        android:text="@string/description"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="casual"
        android:text="@string/title"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="casual"
        android:text="@string/color"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/text_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="casual"
        android:text="@string/sum"
        android:layout_marginTop="15dp" />

</LinearLayout>